@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.36 2007-08-10 17:53:20 cmatsuoka Exp $
+$Id: ChangeLog,v 1.37 2007-08-10 21:19:33 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -22,6 +22,7 @@ Stable versions
 	- fixed issues with OpenBSD
 	- fixed issues with 64-bit machines
 	- fixed loading of big-endian 16-bit samples
+	- fixed volume slide effects in MDL ("Breaking the Walls" now ok)
 	- using Asle's Prowizard to handle packed MODs
 
 2.1.1 (unreleased)
